<resources>
    <string name="app_name">My Life</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_expenses">Transactions</string>

    <string name="welcome">Welcome to your story</string>

    <string name="login_user">User</string>
    <string name="login_password">Password</string>
    <string name="login_action">Log in</string>
    <string name="register_action">Register</string>
    <string name="login_required_fields">Please complete all obligatory fields: User and Password</string>


    <string name="transactions_successful_add">Your transaction has been added</string>
    <string name="transaction_required_fields">Please add a value to the transaction</string>
    <string name="transaction_value_hint">Transaction value</string>
    <string name="add_transactions_label">Add a transaction</string>
    <string name="add_transactions_type">Type: </string>
    <string name="add_transactions_amount">Amount: </string>
    <string name="add_transactions_category">Select a category</string>
    <string name="add_transactions_button">Add transaction</string>
</resources>
