<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintTop_toTopOf="parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/add_transactions_label"
            android:layout_width="195dp"
            android:layout_height="38dp"
            android:layout_marginTop="40dp"
            android:text="@string/add_transactions_label"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:layout_marginLeft="16dp" />

    <TextView
            android:id="@+id/add_transactions_type_label"
            android:layout_width="112dp"
            android:layout_height="38dp"
            android:text="@string/add_transactions_type"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/add_transactions_label"
            android:layout_marginTop="52dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

    <Spinner
            android:layout_width="202dp"
            android:layout_height="37dp"
            android:id="@+id/add_transactions_type_spinner"
            app:layout_constraintTop_toBottomOf="@+id/add_transactions_label"
            android:visibility="visible"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toEndOf="@+id/add_transactions_type_label"
            android:layout_marginStart="64dp" />

    <TextView
            android:id="@+id/add_transactions_amount_label"
            android:layout_width="112dp"
            android:layout_height="38dp"
            android:text="@string/add_transactions_amount"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/add_transactions_type_label"
            android:visibility="invisible"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="@+id/add_transactions_type_label" />

    <EditText
            android:id="@+id/add_transactions_input"
            android:layout_width="162dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:autofillHints=""
            android:hint="@string/transaction_value_hint"
            app:layout_constraintTop_toTopOf="@+id/add_transactions_amount_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:visibility="invisible" />

    <TextView
            android:id="@+id/add_transactions_category_label"
            android:layout_width="177dp"
            android:layout_height="41dp"
            android:text="@string/add_transactions_category"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/add_transactions_amount_label"
            app:layout_constraintTop_toBottomOf="@+id/add_transactions_amount_label"
            android:layout_marginTop="72dp"
            android:visibility="invisible" />

    <Spinner
            android:layout_width="202dp"
            android:layout_height="37dp"
            android:id="@+id/add_transactions_category_spinner"
            app:layout_constraintTop_toBottomOf="@+id/add_transactions_category_label"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:visibility="invisible" />

    <Button
            android:id="@+id/add_transactions_button"
            android:layout_width="289dp"
            android:layout_height="47dp"
            android:text="@string/add_transactions_button"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="520dp"
            android:visibility="invisible"
            android:layout_marginStart="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>